--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 15 01:56:30 CET 2015
-sdk.dir=C\:\\Users\\Martin\\AppData\\Local\\Android\\sdk
+#Mon Nov 16 12:53:10 CET 2015
+sdk.dir=/Users/Matthew/Documents/Development/adt-bundle-mac-x86_64-20140624/sdk
